manifests/homelab/registry/Deployment-zot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zot
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zot
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/project-zot/zot-linux-amd64:v2.1.21@sha256:8258443838e95989c13c891f78a02bc1c391b5a00591ffef24cb8c17cde28038
          livenessProbe:
            httpGet:
              path: /v2/
              port: http
            initialDelaySeconds: 15
          name: zot
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /v2/
              port: http
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/zot
              name: config
            - mountPath: /etc/zot/auth
              name: htpasswd
            - mountPath: /var/lib/zot
              name: data
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - configMap:
            name: zot-config
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: zot-data
        - name: htpasswd
          secret:
            secretName: zot-htpasswd
