manifests/homelab/registry/Service-zot.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zot
  name: zot
  namespace: registry
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: zot
