manifests/homelab/registry/Ingress-zot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot
  namespace: registry
spec:
  defaultBackend:
    service:
      name: zot
      port:
        number: 5000
  ingressClassName: tailscale
  tls:
    - hosts:
        - registry
